# inferenceatlas-agent-demo

./: .env.example  .gitignore  AGENTS.md  AI_JUDGE_MANIFEST.json  BUILD_PLAN_TO_JUNE_12.md  README.md  pyproject.toml
agent/: __init__.py  _env.py  access_request.py  agent.py  blast_radius.py  catalog_token_fallback.py  chat_answer.py  chat_orchestrator.py  chat_salience.py  cli.py  coach_enrichment.py  coach_narration.py  coach_session.py  coach_stream.py  coach_suggestions.py  composio_dry_run_diff.py  config.py  connector_oauth.py  connector_runtime.py  contract.py  cost_plan.py  decision_brief.py  demo.py  downstream_gate.py  evidence_receipts.py  gate.py  github_repo.py  google_drive_files.py  judge.py  mem0_memory.py  nebius_evidence_synthesis.py  nebius_reviewer_narration.py  outcome_memo.py  packet.py  packet_advisor.py  packet_authority.py  packet_detail.py  packet_diff.py  pilot_memo.py  portkey_adapter.py  (+46 more)
data/: master_ai_pricing_dataset_16_providers.csv
docs/: AGENTIC_REVIEW_EXPECTED_OUTPUT.md  AGENT_SKILLS.md  ARCHITECTURE.md  ARTIFACT_MAP.md  COMMAND_REFERENCE.md  CONTRACT.md  CTO_HANDOFF.md  DEMO_90_SECOND_SCRIPT.md  DEMO_RECORDING_SCRIPT.md  DESIGN_PARTNER_BRIEF.md  DESIGN_PARTNER_TRIAL_KIT.md  JUDGE_REVIEW_GUIDE.md  LIVE_INTEGRATION_CONTRACT.md  PORTKEY_PLANE_B_README.md  PRODUCT_QUALITY_AUDIT.md  PRODUCT_TOUR.md  REVIEW_60_PATH.md  REVIEW_ROOM_WALKTHROUGH.md  SAFETY_CONTRACT.md  V1_API_GATEWAY.md  V1_CAPABILITY_PASSPORT.md
examples/: sample_decision_packet.md
policy/: agent_access.yml
schemas/: agent_access_decision_brief.schema.json  coach_suggestion.schema.json  decision_packet.schema.json  pilot_memo.schema.json  proof_graph.schema.json  (+2 more)
web/: app.py  (+3 more)
(+158 files in other folders)
